# flow-inspector

./: .gitignore  README.md  docker-compose.yaml  package-lock.json  package.json  webpack.config.js
client/: index.html  index.tsx
client/containers/: home.scss  home.tsx
client/reducers/: index.ts
client/store/: index.ts
examples/: CMakeLists.txt  main.cpp
server/: Cargo.toml
server/src/: index.html  main.rs
types/: global.d.ts
